--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,7 +29,7 @@ jobs:
       # Step 3: Initialize Terraform
       - name: Terraform Init
         run: terraform init
-        working-directory: C:\Users\mahid\Downloads\S37 - dataset\terraform
+        working-directory: terraform
 
       # Step 4: Apply Terraform (Provision EC2 and Networking)
       - name: Terraform Apply
@@ -37,7 +37,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: terraform apply -auto-approve
-        working-directory: C:\Users\mahid\Downloads\S37 - dataset\terraform
+        working-directory: terraform
 
       # Step 5: Output Public IP
       - name: Output EC2 Public IP
